# sylva-lang

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  sylva.g
docs/: Demo.md
foundation/: foundation.c  manifest.yaml  number.sylva  object.sylva  string.sylva
include/sylva/: define.h  foundation.h  foundation.sylva  lexer.h  parser.h  platform.h  project.h  runtime.h  schema.h  string.h  sylva.h  token.h  util.h
src/: CMakeLists.txt
src/cli/: cli.c
src/lib/: lexer.c  parser.c  project.c  schema.c  string.c  token.c  util.c
src/runtime/: args.c  foundation.c  func.c  member.c  object.c  runtime.c  value.c
src/sylva/: lexer.c  parser.c  string.c  token.c
src/sylva-cli/: cli.c
src/sylva-runtime/: runtime.c
sylva/: sylva-lexer.c  sylva-lexer.h  sylva-platform.h  sylva-string.c  sylva-string.h  sylva-token.c  sylva-token.h  sylva.h
test/: CMakeLists.txt  runtime_test.c
